--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -82,7 +82,8 @@
     <div class="row row-cols-auto">
         <div class="col-3">
             <!--Список сообществ пользователя-->
-            <div class="block_div" style="margin-top: 50px; margin-left: 0px; width: 305px; height: 170px; position: fixed;">
+            <div class="block_div"
+                 style="margin-top: 50px; margin-left: 0px; width: 305px; height: 170px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
                     <br/>
                     <p class="block_p_no_color p-main-color">Что-то</p>
@@ -118,69 +119,18 @@
                     </div>
                 </div>
                 <hr class="block_line"/>
-                <table style="margin-top: -15px; margin-left: -2px; height: auto; max-height: 500px; margin-right: 10px; display: flex; justify-content: center;" class="scroll">
-                    <tbody>
-                    <tr th:if="${groups.isEmpty()}">
-                        </br>
-                        <p style="justify-content: center;"> Нет сообществ </p>
-                    </tr>
-                    <tr th:each="group : ${groups}">
-                        <td>
-                            <form id="groupForm" action="#"
-                                  th:action="@{/group/{id}(id=${group.getId()})}" method="get">
-                                <button type="submit" class="no-button">
-                                    <div class="div_group_item_list">
-                                        <div class="row">
-                                            <div class="col-2 col-md-1">
-                                                <img class="figure_img_group_item_list" alt="image"
-                                                     th:src="${group.getAvtar()}"/>
-                                            </div>
-                                            <div class="col align-self-center">
-                                                <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
-                                                <div class="main_div_group_item_list">
-                                                    <div class="icon_div_group_item_list">
-                                                        <i class="fa-solid fa-children"></i>
-                                                    </div>
-                                                    <div class="subscribes_div_group_item_list">
-                                                        <p class="subscribes_p_group_item_list"
-                                                           th:text="${group.getSubscribes()}"></p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </button>
-                            </form>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <!--Список сообществ пользователя-->
-            <div class="block_div" style="margin-top: 50px; margin-left: 30px; width: 385px; height: 500px; position: fixed;">
-                <div class="block_div_no_color" style="margin-top: 0px;">
-                    <br/>
-                    <p class="block_p_no_color p-main-color">Подписки</p>
-                </div>
-                <hr class="block_line"/>
-                <table style="margin-top: -15px; margin-left: -2px; height: 400px; margin-right: 10px;" class="scroll">
-                    <tbody>
-                    <tr th:if="${userLogin==null}">
-                        </br>
-                        <p style="justify-content: center;">Вы не зарегистрированы</p>
-                    </tr>
-                    <tr th:if="${userLogin!=null}">
-                        <tr th:if="${myGroups.isEmpty()}">
+                    <table style="margin-top: -15px; margin-left: -2px; height: auto; max-height: 500px; margin-right: 10px; display: flex; justify-content: center;"
+                           class="scroll">
+                        <tbody>
+                        <div id="groupList">
+                        <tr th:if="${groups.isEmpty()}">
                             </br>
                             <p style="justify-content: center;"> Нет сообществ </p>
                         </tr>
-                        <tr th:each="group : ${myGroups}">
+                        <tr th:each="group : ${groups}">
                             <td>
-                                <form id="groupForm2" action="#" th:action="@{/group/{id}(id=${group.getId()})}"
-                                      method="get">
+                                <form id="groupForm" action="#"
+                                      th:action="@{/group/{id}(id=${group.getId()})}" method="get">
                                     <button type="submit" class="no-button">
                                         <div class="div_group_item_list">
                                             <div class="row">
@@ -189,10 +139,11 @@
                                                          th:src="${group.getAvtar()}"/>
                                                 </div>
                                                 <div class="col align-self-center">
-                                                    <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
+                                                    <p class="name_group_item_list" th:text="${group.getName()}">
+                                                        Имя </p>
                                                     <div class="main_div_group_item_list">
                                                         <div class="icon_div_group_item_list">
-                                                            <i class="fa-solid fa-user"></i>
+                                                            <i class="fa-solid fa-children"></i>
                                                         </div>
                                                         <div class="subscribes_div_group_item_list">
                                                             <p class="subscribes_p_group_item_list"
@@ -206,9 +157,86 @@
                                 </form>
                             </td>
                         </tr>
+                        </div>
+                        </tbody>
+                    </table>
+            </div>
+        </div>
+
+        <div class="col-4" id="searchClose">
+            <!--Список сообществ пользователя-->
+            <div class="block_div"
+                 style="margin-top: 50px; margin-left: 30px; width: 385px; height: 500px; position: fixed;">
+                <div class="block_div_no_color" style="margin-top: 0px;">
+                    <br/>
+                    <p class="block_p_no_color p-main-color">Подписки</p>
+                </div>
+                <hr class="block_line"/>
+                <table style="margin-top: -15px; margin-left: -2px; height: 400px; margin-right: 10px;" class="scroll">
+                    <tbody>
+                    <tr th:if="${userLogin==null}">
+                        </br>
+                        <p style="justify-content: center;">Вы не зарегистрированы</p>
+                    </tr>
+                    <tr th:if="${userLogin!=null}">
+                    <tr th:if="${myGroups.isEmpty()}">
+                        </br>
+                        <p style="justify-content: center;"> Нет сообществ </p>
+                    </tr>
+                    <tr th:each="group : ${myGroups}">
+                        <td>
+                            <form id="groupForm2" action="#" th:action="@{/group/{id}(id=${group.getId()})}"
+                                  method="get">
+                                <button type="submit" class="no-button">
+                                    <div class="div_group_item_list">
+                                        <div class="row">
+                                            <div class="col-2 col-md-1">
+                                                <img class="figure_img_group_item_list" alt="image"
+                                                     th:src="${group.getAvtar()}"/>
+                                            </div>
+                                            <div class="col align-self-center">
+                                                <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
+                                                <div class="main_div_group_item_list">
+                                                    <div class="icon_div_group_item_list">
+                                                        <i class="fa-solid fa-user"></i>
+                                                    </div>
+                                                    <div class="subscribes_div_group_item_list">
+                                                        <p class="subscribes_p_group_item_list"
+                                                           th:text="${group.getSubscribes()}"></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
                     </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="b-container" style="display: none;">
+</div>
+<div class="b-popup" id="popup1">
+    <div class="b-popup-content">
+        <div class="col-5" style="height: auto;">
+            <!--Создание сообщества-->
+            <div class="block_div" style="height: 650px; margin-left: 25px; width: 520px;">
+                <div class="block_div_no_color">
+                    <div class="row">
+                        <div class="col-7">
+                            <p class="p-main-color">Создание сообщества </p>
+                        </div>
+                        <div class="col-2">
+                            <button class="btn btn-primary bet_time" onclick="PopUpHide()"> X </button>
+                        </div>
+                    </div>
+                </div>
+                <hr class="block_line"/>
             </div>
         </div>
     </div>
@@ -217,6 +245,37 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script>
-
+    const search = document.getElementById("search");
+    search.addEventListener('input', function (event) {
+        const formData = {
+            query: this.value,
+        };
+        $.ajax({
+            url: "/searchGroup",
+            type: "POST",
+            data: formData,
+            success: function (response) {
+                if (response === "Success") {
+                    $('#groupList').load(document.URL +  ' #groupList');
+                    document.getElementById("groupList").reload();
+                }
+            }
+        });
+    });
+</script>
+<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+<script>
+    $(document).ready(function(){
+        //Скрыть PopUp при загрузке страницы
+        PopUpHide();
+    });
+    //Функция отображения PopUp
+    function PopUpShow(){
+        $("#popup1").show();
+    }
+    //Функция скрытия PopUp
+    function PopUpHide(){
+        $("#popup1").hide();
+    }
 </script>
 </html>
