--- a/src/main/resources/static/css/groups.css
+++ b/src/main/resources/static/css/groups.css
@@ -1,12 +1,10 @@
 
 .b-container{
-    width:200px;
-    height:150px;
-    background-color: #ccc;
+    width:500px;
+    height:550px;
     margin:0px auto;
     padding:10px;
     font-size:30px;
-    color: #fff;
 }
 .b-popup{
     width:100%;
@@ -17,11 +15,12 @@
     top:0px;
 }
 .b-popup .b-popup-content{
-    margin:40px auto 0px auto;
-    width:100px;
-    height: 40px;
-    padding:10px;
-    background-color: #c5c5c5;
-    border-radius:5px;
-    box-shadow: 0px 0px 10px #000;
+    margin-left:520px;
+    margin-top: 110px;
+}
+.bet_time {
+    float: right;
+    margin-left: 50px;
+    margin-top:10px;
+    margin-right:10px;
 }
