update group when sub, fix text color on auth andr reg page

--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -81,13 +81,13 @@
     <form class="row justify-content-center" id="authForm" method="get">
         <h2 class="p-text-color">Авторизация</h2>
         <div class="mb-3 col-12 col-md-6">
-            <label for="exampleInputEmail1" class="form-label">Email</label>
+            <label for="exampleInputEmail1" class="form-label p-text-color">Email</label>
             <input required type="email" name="email" class="form-control" id="exampleInputEmail1"
                    aria-describedby="emailHelp" placeholder="введите ваш email">
         </div>
         <div class="w-100"></div>
         <div class="mb-3 col-12 col-md-6">
-            <label for="password_" class="form-label">Пароль</label>
+            <label for="password_" class="form-label p-text-color">Пароль</label>
             <div class="password">
                 <input required type="password" name="password" class="form-control" id="password_"
                        placeholder="введите ваш пароль" minlength="8"
