--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -189,7 +189,7 @@
             </table>
         </div>
 
-        <div class="col-4">
+        <div class="col-4" id="recGroup">
             <!--Список сообществ-->
             <div class="block_div" style="margin-top: 50px; margin-left: 30px; height: 500px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
@@ -363,6 +363,7 @@
             success: function (response) {
                 if (response === "Success") {
                     $("#subButton").load(" #subButton > *");
+                    $("#recGroup").load(" #recGroup > *");
                 }
             }
         });
@@ -376,6 +377,7 @@
             success: function (response) {
                 if (response === "Success") {
                     $("#subButton").load(" #subButton > *");
+                    $("#recGroup").load(" #recGroup > *");
                 }
             }
         });
