--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -191,7 +191,7 @@
 
         <div class="col-4">
             <!--Список сообществ-->
-            <div class="block_div" style="margin-top: 50px; margin-left: 30px; height: 500px; position: fixed;">
+            <div class="block_div" style="margin-top: 50px; margin-left: 30px; width: 385px; height: 500px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
                     <br/>
                     <p class="block_p_no_color p-main-color">Рекомендации</p>
