--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/button.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/css/button_up_page.css}"/>
+    <link rel="stylesheet" th:href="@{/css/form_popup.css}"/>
     <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
     <script type="text/javascript" th:src="@{/js/dateTimeEdit.js}"></script>
     <!--<script type="text/javascript" th:src="@{/js/button_up_page.js}"></script>-->
