--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <link rel="stylesheet" th:href="@{/css/button.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/form_popup.css}"/>
     <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
 
     <!--Картинки-->
