Update index.html, icon user

--- a/src/main/resources/static/css/item_list_group.css
+++ b/src/main/resources/static/css/item_list_group.css
@@ -39,8 +39,9 @@
 .icon_div_group_item_list {
     width: 5%;
     align-content: end;
-    margin-top: -3px;
+    margin-top: 0px;
     margin-right: 3px;
+    margin-left: 2px;
 }
 
 .subscribes_div_group_item_list {
