--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,6 +22,7 @@ a {
 
 /* Прокрутка элементов и стили скролла. Нужно изменять height при использовании!!!*/
 .scroll {
+    scroll-margin-top: 0px;
     height: 100px;
     margin-left: -5px;
     display: block;
@@ -44,6 +45,32 @@ a {
     border-radius: 10px;
     background-color: var(--second-color);
 }
+
+
+.scroll_index {
+    scroll-margin-top: 0px;
+    height: 100px;
+    margin-left: -5px;
+    display: block;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    white-space: normal;
+}
+.scroll_index::-webkit-scrollbar {
+    width: 0px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+}
+.scroll_index::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 0px;
+    background-color: var(--background-color);
+}
+.scroll_index::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0);
+    border-radius: 0px;
+    background-color: var(--second-color);
+}
+
 
 ::-webkit-scrollbar {
     width: 10px;
