--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -133,7 +133,7 @@
                 <tr th:each="post : ${posts}">
                     <td>
                         <!--Пост-->
-                        <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 10px;">
+                        <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 5px;">
                             <div class="div_post_item_list">
                                 <div class="row">
                                     <div class="col-2 col-md-1">
@@ -219,7 +219,8 @@
                                                 <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
                                                 <div class="main_div_group_item_list">
                                                     <div class="icon_div_group_item_list">
-                                                        <i class="fa-solid fa-user"></i>
+                                                        <!--<i class="fa-solid fa-user" style="fill: var(&#45;&#45;main-color);"></i>-->
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
                                                     </div>
                                                     <div class="subscribes_div_group_item_list">
                                                         <p class="subscribes_p_group_item_list"
